# solidity

./: .gitignore  CMakeLists.txt
cmake/: EthCompilerSettings.cmake
liblll/: CMakeLists.txt  Compiler.cpp  IRBuilder.cpp  IRBuilder.h  llvmCompiler.cpp  llvmCompiler.h
lllc/: CMakeLists.txt  main.cpp
scripts/: Dockerfile
